; ModuleID = '/home/carl/AnghaBench/libgit2/tests/worktree/extr_worktree.c_test_worktree_worktree__validate_invalid_parent.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/worktree/extr_worktree.c_test_worktree_worktree__validate_invalid_parent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }
%struct.TYPE_6__ = type { i8* }

@fixture = common dso_local global %struct.TYPE_7__ zeroinitializer, align 4
@.str = private unnamed_addr constant [18 x i8] c"testrepo-worktree\00", align 1
@.str.1 = private unnamed_addr constant [24 x i8] c"/path/to/invalid/parent\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_worktree_worktree__validate_invalid_parent() #0 {
  %1 = alloca %struct.TYPE_6__*, align 8
  %2 = load i32, i32* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @fixture, i32 0, i32 0), align 4
  %3 = call i32 @git_worktree_lookup(%struct.TYPE_6__** %1, i32 %2, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  %4 = call i32 @cl_git_pass(i32 %3)
  %5 = load %struct.TYPE_6__*, %struct.TYPE_6__** %1, align 8
  %6 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %5, i32 0, i32 0
  %7 = load i8*, i8** %6, align 8
  %8 = call i32 @git__free(i8* %7)
  %9 = load %struct.TYPE_6__*, %struct.TYPE_6__** %1, align 8
  %10 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %9, i32 0, i32 0
  store i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.1, i64 0, i64 0), i8** %10, align 8
  %11 = load %struct.TYPE_6__*, %struct.TYPE_6__** %1, align 8
  %12 = call i32 @git_worktree_validate(%struct.TYPE_6__* %11)
  %13 = call i32 @cl_git_fail(i32 %12)
  %14 = load %struct.TYPE_6__*, %struct.TYPE_6__** %1, align 8
  %15 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %14, i32 0, i32 0
  store i8* null, i8** %15, align 8
  %16 = load %struct.TYPE_6__*, %struct.TYPE_6__** %1, align 8
  %17 = call i32 @git_worktree_free(%struct.TYPE_6__* %16)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_worktree_lookup(%struct.TYPE_6__**, i32, i8*) #1

declare dso_local i32 @git__free(i8*) #1

declare dso_local i32 @cl_git_fail(i32) #1

declare dso_local i32 @git_worktree_validate(%struct.TYPE_6__*) #1

declare dso_local i32 @git_worktree_free(%struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
